tests/transpiler/x/java/map_nested_assign.error
exit status 1
Main.java:5: error: incompatible types: String cannot be converted to int
data["outer"]["inner"] = 2;
     ^
Main.java:5: error: array required, but Map found
data["outer"]["inner"] = 2;
    ^
Main.java:5: error: incompatible types: String cannot be converted to int
data["outer"]["inner"] = 2;
              ^
Main.java:6: error: incompatible types: String cannot be converted to int
        System.out.println(data.get("outer")["inner"]);
                                             ^
Main.java:6: error: array required, but Object found
        System.out.println(data.get("outer")["inner"]);
                                            ^
5 errors
